# ov5640_video_capture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ipu_csc.c  ipu_csc.h  main.cc  ov_video_capture.cc  ov_video_capture.h
